# hamming-code

./: .gitignore  CMakeLists.txt  CoderModule.c  MatrixGenerator.c
.github/: CODEOWNERS  gitmessage
.github/workflows/: ci.yml  verify_commit_msg.yml
common/include/: CommonTypes.h  FileIo.h
common/src/: FileIo.c
core/include/: CoderModuleLib.h  DefinesLib.h  Size_15.h
core/src/: CoderModule.c
tests/: test_hamming.py
tools/include/: MatrixGeneratorLib.h
tools/src/: MatrixGenerator.c
